--- a/scenario/Web.config
+++ b/scenario/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-scenario-20141002103719;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-scenario-20141002103719.mdf" providerName="System.Data.SqlClient" />
-    <add name="StoryDBContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Story.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="StoryDBContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Story.mdf;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
