--- a/scenario/scenario.csproj
+++ b/scenario/scenario.csproj
@@ -201,6 +201,10 @@
     <Compile Include="Migrations\201412071501425_fix1.Designer.cs">
       <DependentUpon>201412071501425_fix1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201412071745350_fix2.cs" />
+    <Compile Include="Migrations\201412071745350_fix2.Designer.cs">
+      <DependentUpon>201412071745350_fix2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\CharacterRelation.cs" />
@@ -361,6 +365,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201412071501425_fix1.resx">
       <DependentUpon>201412071501425_fix1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201412071745350_fix2.resx">
+      <DependentUpon>201412071745350_fix2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
